# rkdeveloptool

./: CMakeLists.txt  RKBoot.cpp  RKDevice.cpp  RKDevice.h  main.cpp
win32/: unistd.h  win32.h
